--- a/welcome.html
+++ b/welcome.html
@@ -9,5 +9,6 @@
         <h1><font color="red">welcome!!!!</font></h1>
         <h2>Currently preparing ...</h2>
         <footer> (c) 2021 KINOKOMAN </footer>
+        <h2><font size="1">↑あ、今もう2022年だったか。</font></h2>
     </body>
 </html>
