--- a/welcome.html
+++ b/welcome.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1><font color="red">welcome!!!!</font></h1>
-        <h2><font size="7">このサイトは怪しい危ないサイトではありません安全なサイトです</font></h2>
+        <h2><font size="7"><p class="blink">このサイトは怪しい危ないサイトではありません安全なサイトです</font></p></h2>
         <h2>Currently preparing ...</h2>
         <h2>準備中...</h2>
         <footer> (c) 2021 KINOKOMAN </footer>
