--- a/welcome.html
+++ b/welcome.html
@@ -12,5 +12,10 @@
         <h2>準備中...</h2>
         <footer> (c) 2021 KINOKOMAN </footer>
         <h2><font size="1">↑あ、今もう2022年だったか。</font></h2>
+        <label>
+          <span>welcome</span>
+          <input type="checkbox" name="checkbox">
+          <div id="popup"><img src="https://assets.techacademy.jp/public/logo.png" alt="TechAcademy" /></div>
+        </label>
     </body>
 </html>
