--- a/welcome.html
+++ b/welcome.html
@@ -14,7 +14,7 @@
         <h2><font size="1">↑あ、今もう2022年だったか。</font></h2>
         <label>
           <span>welcome</span>
-          <input type="checkbox" name="checkbox">
+          <input type="button" name="checkbox">
           <div id="popup"><img src="https://assets.techacademy.jp/public/logo.png" alt="TechAcademy" /></div>
         </label>
     </body>
