--- a/welcome.html
+++ b/welcome.html
@@ -12,10 +12,6 @@
         <h2>準備中...</h2>
         <footer> (c) 2021 KINOKOMAN </footer>
         <h2><font size="1">↑あ、今もう2022年だったか。</font></h2>
-        <label>
-          <span>welcome</span>
-          <input type="button" name="checkbox">
-          <div id="popup"><img src="https://assets.techacademy.jp/public/logo.png" alt="TechAcademy" /></div>
-        </label>
+        <button type="button"onclick="alert('welcome!')">welcome_button</button>
     </body>
 </html>
