--- a/testpage.html
+++ b/testpage.html
@@ -7,5 +7,16 @@
     </head>
     <body>
         <h1>失敗作一覧</h1>
+         <button onclick="location.href='sample.html'">サンプル</button>
+         <button onclick="location.href='sample.html'">サンプル</button>
+         <button onclick="location.href='sample.html'">サンプル</button>
+         <button onclick="location.href='sample.html'">サンプル</button>
+         <button onclick="location.href='sample.html'">サンプル</button>
+         <button onclick="location.href='sample.html'">サンプル</button>
+         <button onclick="location.href='sample.html'">サンプル</button>
+         <button onclick="location.href='sample.html'">サンプル</button>
+         <button onclick="location.href='sample.html'">サンプル</button>
+         <button onclick="location.href='sample.html'">サンプル</button>
+         <button onclick="location.href='sample.html'">サンプル</button>
     </body>
 </html>
