--- a/welcome.html
+++ b/welcome.html
@@ -14,5 +14,6 @@
         <h2><font size="1">↑あ、今もう2022年だったか。</font></h2>
         <button type="button"onclick="alert('welcome!')">welcome_button</button>
         <button onclick="location.href='testpage.html'">失敗作を見に行く</button>
+        <button onclick="location.href='login.html'">パスワードを入力する</button>
     </body>
 </html>
