--- a/実験.html
+++ b/実験.html
@@ -1,38 +1,30 @@
-h1 {
-  padding: 0.25em 0.5em;/*上下 左右の余白*/
-  color: #494949;/*文字色*/
-  background: transparent;/*背景透明に*/
-  border-left: solid 5px #7db4e6;/*左線*/
-}
-
-h1 {
-  padding: 0.5em;/*文字周りの余白*/
-  color: #494949;/*文字色*/
-  background: #fffaf4;/*背景色*/
-  border-left: solid 5px #ffaf58;/*左線（実線 太さ 色）*/
-}
-
-h1 {
-  padding: 0.4em 0.5em;/*文字の上下 左右の余白*/
-  color: #494949;/*文字色*/
-  background: #f4f4f4;/*背景色*/
-  border-left: solid 5px #7db4e6;/*左線*/
-  border-bottom: solid 3px #d7d7d7;/*下線*/
-}
-
-h1 {
-  color: #505050;/*文字色*/
-  padding: 0.5em;/*文字周りの余白*/
-  display: inline-block;/*おまじない*/
-  line-height: 1.3;/*行高*/
-  background: #dbebf8;/*背景色*/
-  vertical-align: middle;
-  border-radius: 25px 0px 0px 25px;/*左側の角を丸く*/
-}
-
-h1:before {
-  content: '●';
-  color: white;
-  margin-right: 8px;
-}
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
+        <title>welcome!</title>
+    </head>
+    <body>
+      　<div class="container">
+  　　　<section class="background">
+   　　 <div class="content-wrapper">
+      　<p class="content-title">Full Page Parallax Effect</p>
+      　<p class="content-subtitle">Scroll down and up to see the effect!</p>
+    　　</div>
+ 　 　　</section>
+ 　　　 <section class="background">
+ 　　   <div class="content-wrapper">
+   　   <p class="content-title">Cras lacinia non eros nec semper.</p>
+  　    <p class="content-subtitle">Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras ut massa mattis nibh semper pretium.</p>
+  　　  </div>
+  　　　</section>
+ 　　　 <section class="background">
+ 　　   <div class="content-wrapper">
+ 　     <p class="content-title">Etiam consequat lectus.</p>
+ 　     <p class="content-subtitle">Nullam tristique urna sed tellus ornare congue. Etiam vitae erat at nibh aliquam dapibus.</p>
+  　　  </div>
+ 　　　 </section>
+　　　　</div>
+    </body>
+  </html>
