--- a/実験.html
+++ b/実験.html
@@ -26,5 +26,32 @@
   　　  </div>
  　　　 </section>
 　　　　</div>
+        <div class="place_inner">
+					<h3 class="blue_cap">教場風景</h3>
+					<!-- 写真スライダー -->
+					<div id="container">
+						<div id="carousel">
+							<ul id="ulhover">
+								<li><a class="fancybox2" href="img/photos/f01/01_b.jpg?date=20210727" title="英進館久留米本館職員室" rel="groupe1"><img src="img/photos/f01/01.jpg?date=20210727" width="340" height="280" alt="英進館久留米本館職員室" /></a></li>
+								<!--<li><a class="fancybox2" href="img/photos/f01/02_b.jpg?date=20210727" title="英進館久留米本館受付" rel="groupe1"><img src="img/photos/f01/02.jpg?date=20210727" width="340" height="280" alt="英進館久留米本館受付" /></a></li>-->
+								<li><a class="fancybox2" href="img/photos/f01/03_b.jpg?date=20210727" title="英進館久留米本館保護者会" rel="groupe1"><img src="img/photos/f01/03.jpg?date=20210727" width="340" height="280" alt="英進館久留米本館保護者会" /></a></li>
+								<li><a class="fancybox2" href="img/photos/f01/04_b.jpg?date=20210727" title="個別指導時も感染対策はバッチリ" rel="groupe1"><img src="img/photos/f01/04.jpg?date=20210727" width="340" height="280" alt="個別指導時も感染対策はバッチリ" /></a></li>
+								<li><a class="fancybox2" href="img/photos/f01/05_b.jpg?date=20210727" title="国語の授業中" rel="groupe1"><img src="img/photos/f01/05.jpg?date=20210727" width="340" height="280" alt="国語の授業中" /></a></li>
+								<li><a class="fancybox2" href="img/photos/f01/06_b.jpg?date=20210727" title="算数の授業中" rel="groupe1"><img src="img/photos/f01/06.jpg?date=20210727" width="340" height="280" alt="算数の授業中" /></a></li>
+								<li><a class="fancybox2" href="img/photos/f01/07_b.jpg?date=20210727" title="食後は歯を磨きましょう！" rel="groupe1"><img src="img/photos/f01/07.jpg?date=20210727" width="340" height="280" alt="食後は歯を磨きましょう！" /></a></li>
+								<li><a class="fancybox2" href="img/photos/f01/08_b.jpg?date=20210727" title="高瀬先生" rel="groupe1"><img src="img/photos/f01/08.jpg?date=20210727" width="340" height="280" alt="高瀬先生" /></a></li>
+								<li><a class="fancybox2" href="img/photos/f01/09_b.jpg?date=20210727" title="高瀬先生" rel="groupe1"><img src="img/photos/f01/09.jpg?date=20210727" width="340" height="280" alt="高瀬先生" /></a></li>
+								<li><a class="fancybox2" href="img/photos/f01/10_b.jpg?date=20210727" title="高瀬先生" rel="groupe1"><img src="img/photos/f01/10.jpg?date=20210727" width="340" height="280" alt="高瀬先生" /></a></li>
+								<li><a class="fancybox2" href="img/photos/f01/11_b.jpg?date=20210727" title="栗野先生" rel="groupe1"><img src="img/photos/f01/11.jpg?date=20210727" width="340" height="280" alt="栗野先生" /></a></li>
+								<li><a class="fancybox2" href="img/photos/f01/12_b.jpg?date=20210727" title="山口先生" rel="groupe1"><img src="img/photos/f01/12.jpg?date=20210727" width="340" height="280" alt="山口先生" /></a></li>
+								<li><a class="fancybox2" href="img/photos/f01/13_b.jpg?date=20210727" title="法村先生" rel="groupe1"><img src="img/photos/f01/13.jpg?date=20210727" width="340" height="280" alt="法村先生" /></a></li>
+								<li><a class="fancybox2" href="img/photos/f01/14_b.jpg?date=20210727" title="廣脇先生" rel="groupe1"><img src="img/photos/f01/14.jpg?date=20210727" width="340" height="280" alt="廣脇先生" /></a></li>
+								<li><a class="fancybox2" href="img/photos/f01/15_b.jpg?date=20210727" title="田知行先生" rel="groupe1"><img src="img/photos/f01/15.jpg?date=20210727" width="340" height="280" alt="田知行先生" /></a></li>
+							</ul>
+						</div>
+					</div>
+					<!-- /写真スライダー end -->
+				</div>
     </body>
   </html>
+
