--- a/logintest.html
+++ b/logintest.html
@@ -10,9 +10,8 @@
         <input type="submit" name="botton" value="LOGIN">
       </div>
     </form>
-body {
-  background-color: #808080;
-}
+ <body>
+ {background-color: #808080;}
 
 form {
   width: 400px;
