--- a/logintest.html
+++ b/logintest.html
@@ -1,74 +1,118 @@
 <!-- HTMLコード -->
-<form name="login_form">
-      <div class="login_form_top">
-        <h1>LOGIN</h1>
-        <p>UserID、Passwordをご入力の上、「LOGIN」ボタンをクリックしてください。</p>
-      </div>
-      <div class="login_form_btm">
-        <input type="id" name="user_id" placeholder="UserID">
-        <input type="password" name="password" placeholder="Password">
-        <input type="submit" name="botton" value="LOGIN">
-      </div>
-    </form>
- <body>
- {background-color: #808080;}
+<div class="form-wrapper">
+  <h1>Sign In</h1>
+  <form>
+    <div class="form-item">
+      <label for="email"></label>
+      <input type="email" name="email" required="required" placeholder="Email Address"></input>
+    </div>
+    <div class="form-item">
+      <label for="password"></label>
+      <input type="password" name="password" required="required" placeholder="Password"></input>
+    </div>
+    <div class="button-panel">
+      <input type="submit" class="button" title="Sign In" value="Sign In"></input>
+    </div>
+  </form>
+  <div class="form-footer">
+    <p><a href="#">Create an account</a></p>
+    <p><a href="#">Forgot password?</a></p>
+  </div>
+</div>
+/* Fonts */
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400);
+
+/* fontawesome */
+@import url(http://weloveiconfonts.com/api/?family=fontawesome);
+[class*="fontawesome-"]:before {
+  font-family: 'FontAwesome', sans-serif;
+}
+
+/* Simple Reset */
+* { margin: 0; padding: 0; box-sizing: border-box; }
+
+/* body */
+body {
+  background: #e9e9e9;
+  color: #5e5e5e;
+  font: 400 87.5%/1.5em 'Open Sans', sans-serif;
+}
+
+/* Form Layout */
+.form-wrapper {
+  background: #fafafa;
+  margin: 3em auto;
+  padding: 0 1em;
+  max-width: 370px;
+}
+
+h1 {
+  text-align: center;
+  padding: 1em 0;
+}
 
 form {
-  width: 400px;
-  padding: 40px 10px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  background-color: #000;
-  text-align: center;
+  padding: 0 1.5em;
 }
 
-form h1,form p {
-  color: white;
-  font-weight: 500;
+.form-item {
+  margin-bottom: 0.75em;
+  width: 100%;
 }
 
-form p {
-  font-size: 10px;
+.form-item input {
+  background: #fafafa;
+  border: none;
+  border-bottom: 2px solid #e9e9e9;
+  color: #666;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1em;
+  height: 50px;
+  transition: border-color 0.3s;
+  width: 100%;
 }
 
-form input[type = "id"],form input[type = "password"] {
-  border: 0;
-  background: none;
-  display: block;
-  margin: 20px auto;
-  border: 2px solid #ff69b4;
-  padding: 15px 10px;
-  width: 200px;
+.form-item input:focus {
+  border-bottom: 2px solid #c0c0c0;
   outline: none;
-  border-radius: 24px;
-  transition: 0.25s;
-  text-align: center;
 }
 
-form input[type = "id"]:focus,form input[type = "password"]:focus {
-  width: 280px;
-  background-color: #f0f8ff;
+.button-panel {
+  margin: 2em 0 0;
+  width: 100%;
 }
 
-form input[type = "submit"]{
-  border: 0;
-  background: none;
-  display: block;
-  margin: 20px auto;
-  border: 2px solid #f0f8ff;
-  padding: 15px 10px;
-  width: 200px;
-  outline: none;
-  color: white;
-  border-radius: 25px;
-  transition: 0.25s;
-  text-align: center;
+.button-panel .button {
+  background: #f16272;
+  border: none;
+  color: #fff;
   cursor: pointer;
+  height: 50px;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1.2em;
+  letter-spacing: 0.05em;
+  text-align: center;
+  text-transform: uppercase;
+  transition: background 0.3s ease-in-out;
+  width: 100%;
 }
 
-form input[type = "submit"]:hover {
-  background-color: #ff69b4;
-  border: 2px solid #ff69b4;
+.button:hover {
+  background: #ee3e52;
+}
+
+.form-footer {
+  font-size: 1em;
+  padding: 2em 0;
+  text-align: center;
+}
+
+.form-footer a {
+  color: #8c8c8c;
+  text-decoration: none;
+  transition: border-color 0.3s;
+}
+
+.form-footer a:hover {
+  border-bottom: 1px dotted #8c8c8c;
 }
