--- a/logintest.html
+++ b/logintest.html
@@ -9,7 +9,7 @@
 
 <header>
     <center>
-        <h1>JavaScriptとHTMLで簡単なログインフォームを作る</h1>
+        <h1>ログイン画面</h1>
     </center>
 </header>
 <style>
