--- a/toradesu.html
+++ b/toradesu.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
-        <title>welcome!</title>
+        <title>toradesu</title>
     </head>
     <body>
       <h1>虎</h1>
