--- a/toradesu.html
+++ b/toradesu.html
@@ -7,8 +7,8 @@
     </head>
     <body>
       <h1>虎</h1>
-      <button onclick="location.href='tora1png.html'">とら1</button>
-      <button onclick="location.href='tora2png.html'">とら2</button>
+      <button onclick="location.href='無題73_20220107175109.png'">とら1</button>
+      <button onclick="location.href='無題74_20220110161945.png'">とら2</button>
       <button onclick="location.href='welcome.html'">もどる</button>
     </body>
 </html>
