--- a/testpage.html
+++ b/testpage.html
@@ -7,16 +7,16 @@
     </head>
     <body>
         <h1>失敗作一覧</h1>
-         <button onclick="location.href='sample.html'">サンプル</button>
-         <button onclick="location.href='sample.html'">サンプル</button>
-         <button onclick="location.href='sample.html'">サンプル</button>
-         <button onclick="location.href='sample.html'">サンプル</button>
-         <button onclick="location.href='sample.html'">サンプル</button>
-         <button onclick="location.href='sample.html'">サンプル</button>
-         <button onclick="location.href='sample.html'">サンプル</button>
-         <button onclick="location.href='sample.html'">サンプル</button>
-         <button onclick="location.href='sample.html'">サンプル</button>
-         <button onclick="location.href='sample.html'">サンプル</button>
-         <button onclick="location.href='sample.html'">サンプル</button>
+         <button onclick="location.href='comment.html'">comment.html</button>
+         <button onclick="location.href='favicon.ico'">favicon.ico</button>
+         <button onclick="location.href='google'">google</button>
+         <button onclick="location.href='icon.html'">icon.html</button>
+         <button onclick="location.href='japantime.html'">japantime.html</button>
+         <button onclick="location.href='kinokoman_homedesu.html'">kinokoman_homedesu.html</button>
+         <button onclick="location.href='login.html'">login.html</button>
+         <button onclick="location.href='logintest.html'">logintest.html</button>
+         <button onclick="location.href='tora.html'">tora.html</button>
+         <button onclick="location.href='実験.html'">実験.html</button>
+         <button onclick="location.href='welcome.html'">もどる</button>
     </body>
 </html>
