--- a/testpage.html
+++ b/testpage.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1>失敗作一覧</h1>
+        <h2>注意！！comment.htmlはなぜか勝手にファイルがインストールされます！害はありません！</h2>
          <button onclick="location.href='comment.html'">comment.html</button>
          <button onclick="location.href='favicon.ico'">favicon.ico</button>
          <button onclick="location.href='google'">google</button>
