--- a/testpage.html
+++ b/testpage.html
@@ -8,6 +8,7 @@
     <body>
         <h1>失敗作一覧</h1>
         <h2><font color="red">注意！！comment.htmlはなぜか勝手にファイルがインストールされます！害はありません！</font></h2>
+        <h2>追記　↑直りました。</h2>
          <button onclick="location.href='comment.html'"><font color="red">comment.html</font></button>
          <button onclick="location.href='favicon.ico'">favicon.ico</button>
          <button onclick="location.href='google'">google</button>
