--- a/loding2.html
+++ b/loding2.html
@@ -5,12 +5,19 @@
         <link rel="stylesheet" href="style.css">
         <title>welcome!</title>
     </head>
-    <div class="cp_loading19">
-	         <div class="cp_item"></div>
-	         <div class="cp_item"></div>
-	         <div class="cp_item"></div>
-         	 <div class="cp_item"></div>
-           *, *:before, *:after {
+    <div class="cp_loading">
+<div class="cp_loading19">
+<div class="cp_item"></div>
+<div class="cp_item"></div>
+<div class="cp_item"></div>
+<div class="cp_item"></div>
+</div>
+</div></div><div class="eight columns code_cont"><div class="copybtn"><button class="btn" data-clipboard-text=""><svg class="svg_logo copy_img"><use xlink:href="#copy_img" /></svg></button><pre title="html"><code class="html">&lt;div class=&quot;cp_loading19&quot;&gt;
+	&lt;div class=&quot;cp_item&quot;&gt;&lt;/div&gt;
+	&lt;div class=&quot;cp_item&quot;&gt;&lt;/div&gt;
+	&lt;div class=&quot;cp_item&quot;&gt;&lt;/div&gt;
+	&lt;div class=&quot;cp_item&quot;&gt;&lt;/div&gt;
+&lt;/div&gt;</code></pre></div><div class="copybtn"><button class="btn" data-clipboard-text=""><svg class="svg_logo copy_img"><use xlink:href="#copy_img" /></svg></button><pre title="css"><code class="css">*, *:before, *:after {
 	-webkit-box-sizing: border-box;
 	        box-sizing: border-box;
 }
@@ -87,6 +94,4 @@
 	100% {
 		opacity: 1;
 	}
-}
-    </div>
-  
+}</code></pre></div></div></div></div>
