--- a/loding2.html
+++ b/loding2.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="style.css">
         <title>welcome!</title>
     </head>
-    <div class="defalt"><div class="row"><div class="eight columns code_cont preview_blk"><div class="rating_blk"><div class="rating">ニャン易度  <span class="filled-rate2"></span><span class="empty-rate"></span></div></div><style media="screen">
+    <div class="defalt"><div class="row"><div class="eight columns code_cont preview_blk"><div class="rating_blk"><div class="rating">  <span class="filled-rate2"></span><span class="empty-rate"></span></div></div><style media="screen">
 .cp_loading * {
 -webkit-box-sizing: border-box;
 box-sizing: border-box;
