--- a/loading2.html
+++ b/loading2.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="style.css">
         <title>welcome!</title>
     </head>
-    <h1><font color="red"><font size="3">      welcome!!!!</font></h1>
+    <h1><font color="red"><font size="3">&nbsp;&nbsp;&nbsp;welcome!!!!</font></h1>
     <div class="defalt"><div class="row"><div class="eight columns code_cont preview_blk"><div class="rating_blk"><div class="rating">  <span class="filled-rate2"></span><span class="empty-rate"></span></div></div><style media="screen">
 .cp_loading * {
 -webkit-box-sizing: border-box;
