--- a/mozitest1.html
+++ b/mozitest1.html
@@ -21,7 +21,7 @@
   <span>O</span>
   <span>N</span>
 </h1>
-  @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
+ url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
 
 .title {
   display: flex;
