--- a/welcome.html
+++ b/welcome.html
@@ -9,7 +9,7 @@
         <h1><font color="red">welcome!!!!</font></h1>
         <div align=""><font size="7"><font style="font-family:'ＭＳ Ｐ明朝',細明朝体,serif;font-weight:bold;"><font style="color:#FF00FF">こ</font><font style="color:#E11EFF">の</font><font style="color:#D22DFF">サ</font><font style="color:#C33CFF">イ</font><font style="color:#B44BFF">ト</font><font style="color:#A55AFF">は</font><font style="color:#9669FF">安</font><font style="color:#8778FF">全</font><font style="color:#7887FF">で</font><font style="color:#6996FF">す</font><font style="color:#5AA5FF">(</font><font style="color:#4BB4FF">#</font><font style="color:#3CC3FF">^</font><font style="color:#2DD2FF">.</font><font style="color:#1EE1FF">^</font><font style="color:#0FF0FF">#</font><font style="color:#00FFFF">)</font></font></font></div>
         <h2>Currently preparing ...</h2>
-        <h2>準備中...</h2>
+        <h2>準備中う...</h2>
         <footer> (c) 2021 KINOKOMAN </footer>
         <h2><font size="1">↑あ、今もう2022年だったか。</font></h2>
         <button type="button"onclick="alert('welcome!')">welcome_button</button>
