--- a/welcome.html
+++ b/welcome.html
@@ -23,5 +23,6 @@
         day = date.getDate();
         document.getElementById("current_date").innerHTML = month + "/" + day + "/" + year;
         </script>
+        <p>今日、キノコマンは生きています</p>
     </body>
 </html>
