--- a/welcome.html
+++ b/welcome.html
@@ -21,7 +21,7 @@
         year = date.getFullYear();
         month = date.getMonth() + 1;
         day = date.getDate();
-        document.getElementById("current_date").innerHTML = month + "/" + day + "/" + year;
+        document.getElementById("current_date").innerHTML = year + "/" + month + "/" + day;
         </script>
         <p>今日、キノコマンは生きています</p>
     </body>
