--- a/welcome.html
+++ b/welcome.html
@@ -12,6 +12,7 @@
         <h2>準備中...</h2>
         <footer> (c) 2021 KINOKOMAN </footer>
         <h2><font size="1">↑あ、今もう2022年だったか。</font></h2>
+        <a href="home.html">HOME</a>
         <button type="button"onclick="alert('welcome!')">welcome_button</button>
         <button onclick="location.href='testpage.html'">失敗作を見に行く</button>
         <button onclick="location.href='login.html'">パスワードを入力する</button>
