--- a/home.html
+++ b/home.html
@@ -1,1 +1,25 @@
-home
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="example.css">
+  <title>サンプルのサイト</title>
+  <link rel="stylesheet" type="text/css" href="home.css">
+</head>
+<body>
+<!-- header -->
+  <header>
+  	<h1 class="headline">
+      <a>サンプルのサイト</a>
+    </h1>
+    <ul class="nav-list">
+      <li class="nav-list-item">
+        <a>Home</a>
+      </li>
+      <li class="nav-list-item">About</li>
+      <li class="nav-list-item">Topic</li>
+    </ul>
+  </header>
+</body>
+</html>
+
