--- a/home.html
+++ b/home.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="example.css">
-  <title>サンプルのサイト</title>
+  <title>HOME</title>
   <link rel="stylesheet" type="text/css" href="home.css">
 </head>
 <body>
 <!-- header -->
   <header>
   	<h1 class="headline">
-      <a>サンプルのサイト</a>
+      <a>キノコホーム</a>
     </h1>
     <ul class="nav-list">
       <li class="nav-list-item">
