--- a/home.html
+++ b/home.html
@@ -20,6 +20,15 @@
       <li class="nav-list-item">Topic</li>
     </ul>
   </header>
+  <footer>
+　　<ul class="footer-menu">
+     <li>home ｜</li>
+     <li>about ｜</li>
+     <li>service ｜</li>
+     <li>Contact Us</li>
+    </ul>
+    <p>© All rights reserved by webcampnavi.</p>
+  </footer>
 </body>
 </html>
 
