--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
      <li>service ｜</li>
      <li>Contact Us</li>
     </ul>
-    <p>© All rights reserved by webcampnavi.</p>
+    <p>© 2022 KINOKOMAN</p>
   </footer>
 </body>
 </html>
