--- a/home.html
+++ b/home.html
@@ -20,6 +20,7 @@
       <li class="nav-list-item">Topic</li>
     </ul>
   </header>
+  <a href="" class="btn btn--circle btn--circle-c btn--shadow"><i class="fas fa-arrow-up"></i></a>
   <footer>
 　　<ul class="footer-menu">
      <li>home ｜</li>
