--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
       <li class="nav-list-item">Topic</li>
     </ul>
   </header>
-  <p>現在準備中…</p>
+  <p><font size="5">現在準備中…</font></p>
   <a href="" class="btn btn--circle btn--circle-c btn--shadow"><i class="fas fa-arrow-up"></i></a>
   <footer>
 　　<ul class="footer-menu">
@@ -29,7 +29,7 @@
      <li>service ｜</li>
      <li>Contact Us</li>
     </ul>
-    <p>© 2022 KINOKOMAN</p>
+    <p>© 2022 KINOKOMAN</font></p>
   </footer>
 </body>
 </html>
