--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 <!-- header -->
   <header>
   	<h1 class="headline">
-      <a>キノコホーム</a>
+      <a>キノコマン</a>
     </h1>
     <ul class="nav-list">
       <li class="nav-list-item">
