--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
   </header>
   <p><font size="5">現在準備中…</font></p>
   <br>
-  <a href="" class="btn btn--circle btn--circle-c btn--shadow"><i class="fas fa-arrow-up"></i></a>
+  <a href="#" class="btn-circle-stitch"><i class="fas fa-arrow-up">↑</i></a>
   <footer>
 　　<ul class="footer-menu">
      <li>home ｜</li>
