--- a/home.html
+++ b/home.html
@@ -21,6 +21,32 @@
   </header>
   <p><font size="5">現在準備中…</font></p>
   <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
   <a href="#" class="btn-circle-stitch"><i class="fas fa-arrow-up">↑</i></a>
   <footer>
 　　<ul class="footer-menu">
