--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
   <br>
   <p><font size="5">現在準備中…</font></p>
   <br>
-  <a href="#" class="btn-circle-stitch"><i class="fas fa-arrow-up">↑</i></a>
+  <a href="" class="fixed_btn"><i class="fas fa-arrow-up">↑</i></a>
   <footer>
 　　<ul class="footer-menu">
      <li>home ｜</li>
