--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
   <br>
   <p><font size="5">現在準備中…</font></p>
   <br>
-  <button class="fixed_btn">TOP</button>
+  <button class="fixed_btn"><i class="fas fa-arrow-up">TOP</i></button>
   <footer>
 　　<ul class="footer-menu">
      <li>home ｜</li>
