--- a/home.html
+++ b/home.html
@@ -48,6 +48,13 @@
   <p><font size="5">現在準備中…</font></p>
   <br>
   <button class="fixed_btn"><i class="fas fa-arrow-up">TOP</i></button>
+  <script type="text/javascript">
+    $(function(){
+  　$("#top_btn").on("click", function(){
+    $("html, body").animate({scrollTop: 0 }, 1000, "swing");
+  　});
+　　});
+  </script>
   <footer>
 　　<ul class="footer-menu">
      <li>home ｜</li>
