--- a/home.html
+++ b/home.html
@@ -50,7 +50,7 @@
   <button class="fixed_btn"><i class="fas fa-arrow-up">TOP</i></button>
   <script type="text/javascript">
     $(function(){
-  　$("#fixed_btn").on("click", function(){
+  　$("fixed_btn").on("click", function(){
     $("html, body").animate({scrollTop: 0 }, 1000, "swing");
   　});
 　　});
