--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
   <br>
   <p><font size="5">現在準備中…</font></p>
   <br>
-  <button class="fixed_btn"><i class="fas fa-arrow-up">TOP</i></button>
+  <button class="fixed_btn"><a href="#title">TOP</></button>
   <script type="text/javascript">
     $(function(){
   　$("fixed_btn").on("click", function(){
