--- a/home__update.html
+++ b/home__update.html
@@ -1,1 +1,68 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>HOME</title>
+  <link rel="stylesheet" type="text/css" href="home.css">
+</head>
+<body>
+<!-- header -->
+  <header>
+  	<h1 class="headline">
+      <a id="title"><a>キノコマン</a></a>
+    </h1>
+    <ul class="nav-list">
+      <li class="nav-list-item">
+        <a>Home</a>
+      </li>
+      <li class="nav-list-item">About</li>
+      <li class="nav-list-item">Topic</li>
+    </ul>
+  </header>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <button class="fixed_btn"><a href="#title"><font size="3">TOP</a></font></button>
+  <script type="text/javascript">
+    $(function(){
+  　$("fixed_btn").on("click", function(){
+    $("html, body").animate({scrollTop: 0 }, 1000, "swing");
+  　});
+　　});
+  </script>
+  <footer>
+　　<ul class="footer-menu">
+     <li>home ｜</li>
+     <li>about ｜</li>
+     <li>service ｜</li>
+     <li>Contact Us</li>
+    </ul>
+    <p>© 2022 KINOKOMAN</font></p>
+  </footer>
+</body>
+</html>
