--- a/home__update.html
+++ b/home__update.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>HOME</title>
-  <link rel="stylesheet" type="text/css" href="home.css">
+  <link rel="stylesheet" type="text/css" href="home_update.css">
 </head>
 <body>
 <!-- header -->
