--- a/home_update.html
+++ b/home_update.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>HOME</title>
+  <title>HOME_UPDATE</title>
   <link rel="stylesheet" type="text/css" href="home_update.css">
 </head>
 <body>
