--- a/home_update.html
+++ b/home_update.html
@@ -55,6 +55,7 @@
   　});
 　　});
   </script>
+   <p id="pageTop"><a href="#"><i class="fa fa-chevron-up"></i></a></p>
   <footer>
 　　<ul class="footer-menu">
      <li>home ｜</li>
