--- a/home_update.html
+++ b/home_update.html
@@ -49,6 +49,110 @@
   <br>
   <p><font size="5">現在準備中…</font></p>
   <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
+  <p><font size="5">現在準備中…</font></p>
+  <br>
   <p id="pageTop"><a href="#"><i class="fa fa-chevron-up"></i></a></p>
   <script type="text/javascript">
   <footer>
