--- a/home_update.html
+++ b/home_update.html
@@ -21,6 +21,9 @@
       <li class="nav-list-item">Topic</li>
     </ul>
   </header>
+  <div class="pagetop">
+  <a class="pagetop-btn" href="#"></a>
+　</div>
   <p><font size="5">現在準備中…</font></p>
   <br>
   <p><font size="5">現在準備中…</font></p>
@@ -153,8 +156,6 @@
   <br>
   <p><font size="5">現在準備中…</font></p>
   <br>
-  <p id="pageTop"><a href="#"><i class="fa fa-chevron-up"></i></a></p>
-  <script type="text/javascript">
   <footer>
 　　<ul class="footer-menu">
      <li>home ｜</li>
