--- a/home_update2.html
+++ b/home_update2.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>HOME_UPDATE</title>
   <link rel="stylesheet" type="text/css" href="home_update2.scss">
+  <link rel="stylesheet" type="text/css" href="home_update2.css">
   <!-- jQuery -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 </head>
