--- a/home_update2.html
+++ b/home_update2.html
@@ -98,6 +98,27 @@ $(window).scroll(function () {
     <li class="sidebar-item"><a href="#" class="sidebar-anchor">Item 4</a></li>
   </ul>
 </div>
+  <script type="text/javascript">
+  $(document).ready(function() {
+
+  function toggleSidebar() {
+    $(".button").toggleClass("active");
+    $("main").toggleClass("move-to-left");
+    $(".sidebar-item").toggleClass("active");
+  }
+
+  $(".button").on("click tap", function() {
+    toggleSidebar();
+  });
+
+  $(document).keyup(function(e) {
+    if (e.keyCode === 27) {
+      toggleSidebar();
+    }
+  });
+
+});
+  </script>
   <p><font size="5">現在準備中…</font></p>
   <br>
   <p><font size="5">現在準備中…</font></p>
