--- a/home.html
+++ b/home.html
@@ -11,7 +11,8 @@
 <!-- header -->
   <header>
   	<h1 class="headline">
-      <a id="title"><a>キノコマン</a></a>
+      <a id="title"><font face="ＭＳ ゴシック">ゴシック体<a>キノコマン</a></font>ゴシック体</font>
+</a>
     </h1>
     <ul class="nav-list">
       <li class="nav-list-item">
