--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 <!-- header -->
   <header>
   	<h1 class="headline">
-      <a id="title"><font face="ＭＳ ゴシック">ゴシック体<a>キノコマン</a></font>ゴシック体</font>
+      <a id="title"><font face="ＭＳ ゴシック"><a>キノコマン</a></font></font>
 </a>
     </h1>
     <ul class="nav-list">
