--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>HOME_UPDATE</title>
+  <title>HOME</title>
   <link rel="stylesheet" type="text/css" href="home_update.css">
   <!-- jQuery -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
