--- a/huzakenna.html
+++ b/huzakenna.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>HUZAKENNA</title>
+  <link rel="stylesheet" type="text/css" href=".css">
+  <!-- jQuery -->
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+</head>
+<body>
