--- a/huzakenna.html
+++ b/huzakenna.html
@@ -8,3 +8,10 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 </head>
 <body>
+  <h1>危険なサイトにアクセスしようとしています</h1>
+  <br>
+  <br>
+  <p>今すぐにこのページを閉じてください。<br>kinokoman.tkでは個人情報が奪われ、悪質なプログラムを入れたりして危険にさらされる恐れがあります。<br>それを分かったうえでアクセスされる場合は下のボタンを押してください。<br>なお、そのままこの画面を閉じるとさらに危険なことが起こる可能性があるので必ずどちらかのボタンを押してください。</p>
+  <a href="usodesu.html" class="cp_btn">キャンセル</a>
+  <br>
+  <a href="usodesu.html" class="cp_btn">アクセスする（推奨されません）</a>
