--- a/huzakenna.html
+++ b/huzakenna.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>HUZAKENNA</title>
-  <link rel="stylesheet" type="text/css" href=".css">
+  <link rel="stylesheet" type="text/css" href="huzakenna.css">
   <!-- jQuery -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 </head>
