--- a/huzakenna.html
+++ b/huzakenna.html
@@ -8,6 +8,7 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 </head>
 <body>
+  <img src="download.png" alt="海の写真" title="空と海">
   <h1>危険なサイトにアクセスしようとしています</h1>
   <br>
   <br>
