--- a/37564.html
+++ b/37564.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>HUZAKENNA</title>
+  <title>【警告】危険なサイト</title>
   <link rel="stylesheet" type="text/css" href="huzakenna.css">
   <!-- jQuery -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
