--- a/37564.html
+++ b/37564.html
@@ -8,7 +8,7 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 </head>
 <body>
-  <audio src=".mp3" autoplay loop>
+  <audio src="Warning-Siren05-02(Fast-Long).mp3" autoplay loop>
   あなたのブラウザーは <code>audio</code>要素をサポートしていません。
 　</audio>
   <h1>！危険なサイトにアクセスしようとしています！</h1>
