--- a/home_update3.html
+++ b/home_update3.html
@@ -64,6 +64,10 @@ $(window).scroll(function () {
         }
 });
     </script>
+　<form id="form1" action="自分のサイトURL">
+　<input id="sbox"  id="s" name="s" type="text" placeholder="キーワードを入力" />
+　<input id="sbtn" type="submit" value="検索" />
+　</form>
   <div class="cp_navi">
   <div id="cp_sidenav" class="sidenav">
 	<a href="#" id="home">Home</a>
