--- a/home_update3.html
+++ b/home_update3.html
@@ -64,7 +64,7 @@ $(window).scroll(function () {
         }
 });
     </script>
-　<form id="form1" action="自分のサイトURL">
+　<form id="form1" action="kinokoman.tk">
 　<input id="sbox"  id="s" name="s" type="text" placeholder="キーワードを入力" />
 　<input id="sbtn" type="submit" value="検索" />
 　</form>
